resources/css/index.css
@font-face {
    font-family: 'Catamaran';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Catamaran Regular'), local('Catamaran-Regular'), url(https://fonts.gstatic.com/s/catamaran/v6/o-0IIpQoyXQa2RxT7-5r5TRA.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

  @font-face {
    font-family: 'Catamaran';
    font-style: normal;
    font-weight: 700;
    font-display: swap;
    src: local('Catamaran Bold'), local('Catamaran-Bold'), url(https://fonts.gstatic.com/s/catamaran/v6/o-0NIpQoyXQa2RxT7-5jXhFVZNyB.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

  @font-face {
    font-family: 'Open Sans';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: local('Open Sans Italic'), local('OpenSans-Italic'), url(https://fonts.gstatic.com/s/opensans/v17/mem6YaGs126MiZpBA-UFUK0Zdc0.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 700;
    font-display: swap;
    src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v17/mem5YaGs126MiZpBA-UN7rgOUuhp.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

  @font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 800;
    font-display: swap;
    src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url(https://fonts.gstatic.com/s/opensans/v17/mem5YaGs126MiZpBA-UN8rsOUuhp.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }



* {
    box-sizing: border-box;
}

/* General Styles */

html {
    font-family: "Open Sans", Arial, Helvetica, sans-serif;
    font-size: 16px;
}

.section-center {
    max-width: 1600px;
    margin: 0 auto;
}

h1 {
    font-size: 2.5rem;
    font-weight: 800;
    margin-bottom: 2.5rem;
}

h2 {
    font-size: 2.2rem;
    font-weight: 800;
    margin-top: 32px;
    margin-bottom: 24px;
}

h3 {
    font-size: 2rem;
    font-weight: 700;
}

p {
    line-height: 1.5em;
}

.author {
    font-size: 0.8rem;
    font-stretch: condensed;
    margin-top: 1.5rem;
}

/* Header Section */

header {
    padding: 0 24px;
    position: fixed;
    z-index: 10;
    width: 100%;
    background-color: white;
}

#header-desktop nav {
    display: flex;
    height: 64px;
    justify-content: space-between;
    align-items: center;
}

.logo-container {
    display: inline-flex;
    align-items: center;
}

.logo-img-container {
    width: 42px;
    overflow: hidden;
    display: inline-block;
}

.logo-img-container img {
    width: 100%;
    height: auto;
}

#logo-text-container {
    display: inline;
    font-family: Catamaran, Arial, sans-serif;
    text-transform: uppercase;
    font-size: 1.7rem;
}

#logo-text-1 {
    font-weight: 700;
}

#logo-text-2 {
    color: gray;
    font-weight: 400;
}

header ul {
    display: inline;
}

header li {
    display: inline;
    margin-left: 16px;
    font-size: 1.25rem;
}

#header-mobile {
    display: none;
}

/* Mobile Header */
@media only screen and (max-width: 775px) {
    #header-desktop {
        display: none;
    }

    #header-mobile {
        display: block;
    }

    #header-mobile nav {
        display: flex;
        justify-content: space-around;
        align-items: center;
        height: 64px;
    }

    #header-mobile img {
        height: 35px;
        width: auto;
    }
}


/* Banner Section */

#banner {
    background-color: lightgray;
    position: relative;
    top: 64px;
}

#banner .picture-container {
    width: 60%;
    height: auto;
    overflow: hidden;
    padding: 32px 24px;
}

#banner .picture-container img {
    width: 100%;
    height: auto;
    display: block;
}

#banner .textbox {
    height: 100%;
    max-width: 593px;
    padding: 32px 24px 32px 16px;
    position: absolute;
    left: 60%;
    top: 0px;
    display: flex;
    align-items: center;
}

#banner .vertical-center {
    padding-right: 15%;
}

#banner .button {
    padding: 8px 0;
    background-color: gray;
    color: white;
    font-size: 1.5rem;
    text-align: center;
    margin-top: 3rem;
}

/* @media only screen and (max-width: 975px) {
    #banner .vertical-center {
        padding-right: 0;
    }
} */

@media only screen and (max-width: 972px) {
    #banner .picture-container {
        width: 100%;
        height: auto;
        overflow: hidden;
        padding: 0px;
    }

    #banner .textbox {
        padding: 32px 16px;
        position: static;
    }

    #banner .vertical-center {
        width: 100%;
        padding-right: 0;
    }

    h1 {
        margin-bottom: 32px;
    }

    #banner .button {
        margin-top: 24px;
    }
}



/* Information Section */
.information {
    position: relative;
    top: 64px;
    width: 100%;
}

.main-article {
    padding: 32px 24px;
    width: 60%;
}

.main-article .picture-container {
    width: 100%;
    height: auto;
    overflow: hidden;
}

.main-article .picture-container img,
.main-article .picture-container video {
    width: 100%;
    height: auto;
    display: block;
}

.secondary-block {
    position: absolute;
    width: 40%;
    max-width: 633px;
    left: 60%;
    top: 16px;
}

.secondary-article {
    position: relative;
    padding: 16px 24px 16px 16px;
}

.secondary-block .highlighted {
    background-color: lightgray;
}

.secondary-article .picture-container {
    width: 35%;
    height: auto;
    overflow: hidden;
}

.secondary-article .picture-container img,
.secondary-article .picture-container-mobile img {
    width: 100%;
    height: auto;
    display: block;
}

.information .textbox {
    position: absolute;
    left: 35%;
    top: 0;
    height: 100%;
    padding: 0 24px;
    display: flex;
    align-items: center;
}

.information p {
    margin: 8px 0 0 0;
}

.information a {
    color: royalblue;
}

.information .picture-container-mobile {
    display: none;
}

.secondary-article .picture-container-mobile {
    width: 100%;
    height: auto;
    overflow: hidden;
}

@media only screen and (max-width: 1170px) {
    .main-article {
        width: 100%;
    }

    .secondary-block {
        position: static;
        width: 100%;
    }

    .secondary-article {
        position: relative;
        padding: 24px 72px 24px 72px;
    }

    .secondary-article .picture-container {
        width: 25%;
        height: auto;
        overflow: hidden;
    }

    .information .textbox {
        left: 29%;
    }
}


@media only screen and (max-width: 600px) {
    #information .main-article {
        display: none;
    }

    .secondary-block {
        position: static;
        width: 100%;
    }

    .secondary-article {
        position: static;
        padding: 16px 16px 32px 16px;
    }

    .information .picture-container {
        display: none;
    }

    .information .picture-container-mobile {
        display: block;
    }

    .information .textbox {
        position: static;
        padding-left: 16px;
        padding-top: 32px;
        display: block;
    }
}

/* Courses Section */

#courses {
    position: relative;
    top: 64px;
    background-color: lightgray;
    padding: 32px 40px 0 72px;
}

#courses .section-center {
    max-width: 1471px;
}

#courses h2 {
    margin-top: 0;
    margin-bottom: 32px;
    text-align: center;
}

.course-block {
    width: 100%;
    display: flex;
}

.course-box {
    flex: 1 1;
    width: 30%;
    display: inline-block;
    vertical-align: top;
    background-color: white;
    margin-right: 32px;
    margin-bottom: 32px;
}

.course-box .picture-container {
    height: auto;
    overflow: hidden;
}

.course-box .picture-container img {
    width: 100%;
    height: auto;
    display: block;
}

.course-box .textbox {
    padding: 16px 16px 16px 16px;
}

.course-box h3,
.course-box p {
    margin-bottom: 8px;
}

@media only screen and (max-width: 860px) {
    #courses {
        background-color: white;
        padding: 32px 16px 32px 16px;
    }

    #courses h2 {
        margin-bottom: 16px;
    }

    .course-block {
        display: block;
    }

    .course-box {
        flex: none;
        width: 100%;
        display: block;
        background-color: lightgray;
        margin: 0 0 8px 0;
    }

    .course-box .picture-container,
    .course-box p {
        display: none;
    }
}



/* Thesis Section */
#thesis {
    position: relative;
    top: 64px;
    width: 100%;
}

#thesis .section-center {
    max-width: 1583px;
}

#thesis .information {
    position: relative;
    top: 0;
}

#thesis h2 {
    text-align: center;
    margin-bottom: 0;
}

#thesis h3 {
    margin-top: 24px;
}

#thesis-video {
    padding-bottom: 24px;
}

#thesis .secondary-block {
    top: 32px;
}

@media only screen and (max-width: 960px) {
    #thesis h3,
    #thesis p, 
    #thesis .secondary-block {
        display: none;
    }

    #thesis .main-article {
        width: 100%;
        padding: 16px 0 24px 0;
    }

}

@media only screen and (max-width: 600px) {
    #thesis .main-article {
        display: block;
    }
    #thesis .picture-container {
        display: block;
    }
}



/* Footer */
footer {
    position: relative;
    top: 64px;
    width: 100%;
    padding: 16px 24px 32px 24px;
}

footer .section-center {
    max-width: 1535px;
}

footer nav {
    display: inline;
    float: right;
}

footer li {
    display: inline;
    margin-left: 16px;
}

@media only screen and (max-width:530px) {
    footer nav {
        display: none;
    }
}

